k8s/webauthn.yaml
kind: Pod
apiVersion: v1
metadata:
  name: webauthn
  labels:
    app: webauthn
spec:
  containers:
  - name: webauthn
    image: quiq/webauthn_proxy:0.0.4
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
    - containerPort: 8080
      protocol: TCP
    volumeMounts:
    - name: config
      mountPath: /opt/config
  volumes:
    - name: config
      configMap:
        name: webauthn
  restartPolicy: Never
---
kind: Service
apiVersion: v1
metadata:
  name: webauthn
spec:
  selector:
    app: webauthn
  ports:
  - port: 8080
